--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "accordion": "^3.0.2",
     "react": "^19.2.0",
+    "react-accessible-accordion": "^5.0.1",
     "react-dom": "^19.2.0",
     "react-select": "^5.10.2",
     "react-select-async-paginate": "^0.7.11",
